--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,29 +1,7 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import "tailwindcss/base";
+@import "_typography.css";
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-#__next {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.container {
-  width: 100%;
-  max-width: 60rem;
-  margin-left: auto;
-  margin-right: auto;
-}
+@import "tailwindcss/components";
+@import "./_buttons.css";
+@import './_blocks.css';
+@import "tailwindcss/utilities";
